force-app/main/default/objects/STR_SignatureRule__c/STR_SignatureRule__c.object-meta.xml
<CustomObject>
    <label>Signature Rule</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Signature Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>