force-app/main/default/objects/STR_SignatureRule__c/fields/STR_CHK_createdByAPI__c.field-meta.xml
<CustomField>
    <fullName>STR_CHK_createdByAPI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created by API</label>
    <type>Checkbox</type>
</CustomField>