force-app/main/default/objects/STR_SignatureRule__c/fields/STR_CUR_AmountFrom__c.field-meta.xml
<CustomField>
    <fullName>STR_CUR_AmountFrom__c</fullName>
    <label>Amount From</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>