force-app/main/default/objects/STR_SignatureRule__c/fields/STR_CUR_AmountTo__c.field-meta.xml
<CustomField>
    <fullName>STR_CUR_AmountTo__c</fullName>
    <label>Amount To</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>