force-app/main/default/objects/STR_SignatureRule__c/fields/STR_PCK_Service__c.field-meta.xml
<CustomField>
    <fullName>STR_PCK_Service__c</fullName>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>S001</fullName>
            </value>
            <value>
                <fullName>S002</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>