force-app/main/default/objects/STR_SignatureRule__c/fields/STR_TXT_RuleId__c.field-meta.xml
<CustomField>
    <fullName>STR_TXT_RuleId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rule Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>