force-app/main/default/objects/STR_SignatureRule__c/fields/STR_TXT_RuleName__c.field-meta.xml
<CustomField>
    <fullName>STR_TXT_RuleName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rule Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>