force-app/main/default/objects/STR_SignatureRule__c/recordTypes/STR_SignatureRule.recordType-meta.xml
<RecordType>
    <fullName>STR_SignatureRule</fullName>
    <active>true</active>
    <label>Signature Rule</label>
</RecordType>